# symphony

./: README.md
python/: .env.example  .gitignore  README.md  SPEC.md  WORKFLOW.md  pyproject.toml  pyrightconfig.json
python/src/symphony/: __init__.py  cli.py  codex_session.py  config.py  issue_agent.py  logging.py  main.py  orchestrator.py  path_safety.py  prompts.py  workflow.py  workflow_store.py  workspace.py
python/src/symphony/tracker/: __init__.py  linear.py  memory.py
python/tests/actors/: test_issue_agent.py  test_orchestrator.py  test_workflow_store.py
python/tests/e2e/: __init__.py  test_codex_smoke.py  test_full_pipeline.py
python/tests/unit/: test_config.py  test_linear_tracker.py  test_logging.py  test_memory_tracker.py  test_path_safety.py  test_prompts.py  test_smoke.py  test_workflow.py  test_workspace.py
